--- a/styles/styles.css
+++ b/styles/styles.css
@@ -60,9 +60,25 @@
     font-weight: bold;
 }
 
-header .active,
+.navbar .navbar-nav .nav-link {
+    border-bottom: 3px solid #fff;
+    transition: all 0.2s ease;
+}
+
+.navbar .navbar-nav .nav-link:hover {
+    border-bottom: 3px solid orange;
+}
+
 .place .nav .active {
     border-bottom: 3px solid orange;
+}
+
+.navbar .navbar-toggler {
+    border: none;
+}
+
+.navbar-toggler:focus {
+   box-shadow: none;
 }
 
 .hero .titulo {
